# FEUP-CAL-PROJ

./: .gitignore  CMakeLists.txt  README.md  README.txt  main.cpp
maps/GridGraphs/custom/4x4/: edges.txt
maps/GridGraphs/custom/8x8/: edges.txt  tags.txt
maps/GridGraphs/custom/8x8/data/: clients.txt  farm.txt  tags.txt
maps/PortoMap/data/: clients.txt  farm.txt
pseudocodigo/: DFS  NNS  RNN  a-star  bidir
src/Context/: Basket.cpp  Basket.h  Client.cpp  Client.h  Farm.cpp  Farm.h  Garage.cpp  Garage.h  Truck.cpp  Truck.h
src/Graph/: Graph.cpp  Graph.h  MutablePriorityQueue.h  Path.cpp  Path.h  Route.cpp  Route.h
src/UI/: Menu.cpp  Menu.h  UI.cpp  UI.h
src/Utils/: MapParser.cpp  MapParser.h  MenuUtils.cpp  MenuUtils.h  PerformanceTesting.cpp  PerformanceTesting.h  Utils.cpp  Utils.h
